# simplydmx-ui

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: style.scss
connectors/: tauri.js
simplydmx_frontend/: README.md  events.md  vite.config.ts
simplydmx_frontend/src/: App.vue  main.ts
simplydmx_frontend/src-tauri/icons/: icon.icns
simplydmx_frontend/src/assets/: style.scss  theme.scss
simplydmx_frontend/src/components/forms/: DynamicForm.vue
simplydmx_frontend/src/components/generic/: dialog.vue  dropdown.vue  icon.vue  number.vue  tabitem.vue  textbox.vue  tooltip.vue
simplydmx_frontend/src/scripts/api/ipc/: ipc_tauri.ts  rpc.ts  types.ts
simplydmx_frontend/src/stores/: typespec.ts
simplydmx_frontend/src/views/patcher/: CreateFixtureDialog.vue  CreateUniverseDialog.vue  UniverseEditor.vue  UniversesTab.vue  patcher.vue
src/: App.vue  components.d.ts  globalComponents.ts  main.rs  main.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: desktop.rs  lib.rs
src/api/: mod.rs
src/api/connector/: mod.rs  types.rs
src/assets/: style.scss  theme.scss
src/components/: HelloWorld.vue
src/components/forms/: DynamicForm.vue  helpers.ts
src/components/generic/: button.vue  dialog.vue  dropdown.vue  icon.vue  largeselect.vue  number.vue  tabs.vue  test.vue  textbox.vue  tooltip.vue
src/scripts/: helpers.ts  random.ts
src/scripts/api/: mixer.ts  patcher.ts
src/scripts/api/ipc/: agnostic_abstractions.ts  helpers.ts  index.ts  ipc_mobile.ts  ipc_tauri.ts  rpc.ts  types.ts
src/scripts/api/outputDrivers/: dmx.ts
src/scripts/api/patcher/: index.ts
src/scripts/api/types/: mixer.ts  patcherFixtureTypes.ts
src/stores/: patch.ts  patcher.ts  typespec.ts  universes.ts
src/views/: Home.vue  patcher.vue
src/views/patcher/: FixtureEditor.vue  FixturesTab.vue  UniversesTab.vue  patcher.vue
(+5 files in other folders)
