[package]
name = "simplydmx_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
yew = "0.19"
js-sys = "0.3.60"
simplydmx_plugin_macros = { path = "../simplydmx_plugin_macros" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
uuid = { version = "1.2.1", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
	"Window",
]

[features]
default = [
	"tauri-connector",
]

tauri-connector = ["connector"]
connector = []
